--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "server": "node build/index.js"
+    "serve": "node build/index.js",
+    "watch": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
